--- a/src/main/resources/templates/addPost.html
+++ b/src/main/resources/templates/addPost.html
@@ -35,6 +35,7 @@
                 <a class="nav-item nav-link active" href="#">Добавить вакансию <span
                         class="sr-only">(current)</span></a>
                 <a class="nav-item nav-link" th:href="@{/candidates}">Кандидаты</a>
+                <a class="nav-item nav-link" th:href="@{/formAddCandidate}">Добавить кандидата</a>
             </div>
         </div>
     </nav>
