--- a/src/main/resources/templates/posts.html
+++ b/src/main/resources/templates/posts.html
@@ -34,6 +34,7 @@
                 <a class="nav-item nav-link active" href="#">Вакансии <span class="sr-only">(current)</span></a>
                 <a class="nav-item nav-link" th:href="@{/formAddPost}">Добавить вакансию</a>
                 <a class="nav-item nav-link" th:href="@{/candidates}">Кандидаты</a>
+                <a class="nav-item nav-link" th:href="@{/formAddCandidate}">Добавить кандидата</a>
             </div>
         </div>
     </nav>
