--- a/src/main/resources/templates/addPost.html
+++ b/src/main/resources/templates/addPost.html
@@ -45,13 +45,14 @@
                 Новая вакансия.
             </div>
             <div class="card-body">
-                <form>
+                <form th:action="@{/createPost}" method="POST">
+                    <input type="hidden" name="id" value="0"/>
                     <div class="form-group">
                         <label>Имя
-                            <input type="text" class="form-control">
+                            <input type="text" class="form-control" name="name" id="name">
                         </label>
                         <label>Описание вакансии
-                            <input type="text" class="form-control">
+                            <input type="text" class="form-control" name="description" id="description">
                         </label>
                     </div>
                     <button type="submit" class="btn btn-primary">Сохранить</button>
