--- a/src/main/resources/templates/addCandidate.html
+++ b/src/main/resources/templates/addCandidate.html
@@ -45,13 +45,14 @@
                 Новый кандидат.
             </div>
             <div class="card-body">
-                <form>
+                <form form th:action="@{/createCandidate}" method="POST">
+                    <input type="hidden" name="id" value="0"/>
                     <div class="form-group">
                         <label>Имя
-                            <input type="text" class="form-control">
+                            <input type="text" class="form-control" name="name" id="name">
                         </label>
                         <label>Описание кандидата
-                            <input type="text" class="form-control">
+                            <input type="text" class="form-control" name="description" id="description">
                         </label>
                     </div>
                     <button type="submit" class="btn btn-primary">Сохранить</button>
