1. Формы. Поля ввода. [#504853]

--- a/src/main/resources/templates/posts.html
+++ b/src/main/resources/templates/posts.html
@@ -54,9 +54,12 @@
                 <td th:text="${post.id}"></td>
                 <td>
                     <a th:href="@{|/formUpdatePost/${post.id}|}">
-                        <i class="fa fa-edit"></i>
-                    </a>
+                        <i class="fa fa-edit"></i></a>
                     <span th:text="${post.name}"></span>
+                    <span th:if="${post.visible}">
+            <i class="fa fa-check-square-o"></i></span>
+                    <span th:if="${!post.visible}">
+            <i class="fa fa-square-o"></i></span>
                 </td>
                 <td th:text="${post.description}"></td>
                 <td th:text="${#temporals.format(post.created, 'dd-MM-yyyy HH:mm')}"></td>
