--- a/src/main/resources/templates/updatePost.html
+++ b/src/main/resources/templates/updatePost.html
@@ -56,7 +56,12 @@
                                    th:field="*{description}">
                         </label>
                     </div>
-                    <button type="submit" class="btn btn-primary">Сохранить</button>
+                    <div class="form-check">
+                        <input type="checkbox" name="visible" class="form-check-input" id="visible"
+                               th:checked="*{visible}">
+                        <label class="form-check-label" for="visible">Опубликовать</label>
+                    </div>
+                    <button type="submit" class="btn btn-primary mt-3">Сохранить</button>
                 </form>
             </div>
         </div>
