--- a/src/main/resources/templates/updatePost.html
+++ b/src/main/resources/templates/updatePost.html
@@ -55,6 +55,13 @@
                             <input type="text" class="form-control" name="description" id="description"
                                    th:field="*{description}">
                         </label>
+                        <label for="city.id">Город
+                            <select class="form-control" id="city.id" name="city.id">
+                                <option th:each="city : ${cities}" th:value="${city.id}"
+                                        th:text="${city.name}" th:selected="${city.equals(post.city)}">
+                                </option>
+                            </select>
+                        </label>
                     </div>
                     <div class="form-check">
                         <input type="checkbox" name="visible" class="form-check-input" id="visible"
