--- a/src/main/resources/templates/addPost.html
+++ b/src/main/resources/templates/addPost.html
@@ -54,6 +54,12 @@
                         <label>Описание вакансии
                             <input type="text" class="form-control" name="description" id="description">
                         </label>
+                        <label for="city.id">Город
+                            <select class="form-control" id="city.id" name="city.id">
+                                <option th:each="city : ${cities}" th:value="${city.id}"
+                                        th:text="${city.name}"></option>
+                            </select>
+                        </label>
                     </div>
                     <div class="form-check">
                         <input type="checkbox" name="visible" class="form-check-input" id="visible">
