4. Формы. Загрузка файла на сервер. [#504855]

--- a/src/main/resources/templates/candidates.html
+++ b/src/main/resources/templates/candidates.html
@@ -46,6 +46,7 @@
                 <th scope="col">#</th>
                 <th scope="col">Имя</th>
                 <th scope="col">Описание</th>
+                <th scope="col">Фотография</th>
                 <th scope="col">Дата создания</th>
             </tr>
             </thead>
@@ -59,6 +60,10 @@
                     <span th:text="${candidate.name}"></span>
                 </td>
                 <td th:text="${candidate.description}"></td>
+                <td>
+                    <img th:width="150" th:high="150" th:src="@{|/photoCandidate/${candidate.id}|}">
+                    <span th:text="${candidate.name}"></span>
+                </td>
                 <td th:text="${#temporals.format(candidate.created, 'dd-MM-yyyy HH:mm')}"></td>
             </tr>
             </tbody>
