--- a/src/main/resources/templates/addCandidate.html
+++ b/src/main/resources/templates/addCandidate.html
@@ -45,7 +45,7 @@
                 Новый кандидат.
             </div>
             <div class="card-body">
-                <form form th:action="@{/createCandidate}" method="POST">
+                <form form th:action="@{/createCandidate}" method="POST" enctype="multipart/form-data">
                     <input type="hidden" name="id" value="0"/>
                     <div class="form-group">
                         <label>Имя
@@ -53,6 +53,9 @@
                         </label>
                         <label>Описание кандидата
                             <input type="text" class="form-control" name="description" id="description">
+                        </label>
+                        <label for="name">Фотография
+                            <input type="file" class="form-control" name="file" id="file">
                         </label>
                     </div>
                     <button type="submit" class="btn btn-primary">Сохранить</button>
