--- a/src/main/resources/templates/updateCandidate.html
+++ b/src/main/resources/templates/updateCandidate.html
@@ -45,7 +45,8 @@
                 Новый кандидат.
             </div>
             <div class="card-body">
-                <form th:action="@{/updateCandidate}" method="POST" th:object="${candidate}">
+                <form th:action="@{/updateCandidate}" method="POST" th:object="${candidate}"
+                      enctype="multipart/form-data">
                     <input type="hidden" name="id" th:field="*{id}"/>
                     <div class="form-group">
                         <label for="name">Имя
@@ -54,6 +55,9 @@
                         <label>Описание кандидата
                             <input type="text" class="form-control" name="description" id="description"
                                    th:field="*{description}">
+                        </label>
+                        <label for="name">Фотография
+                            <input type="file" class="form-control" name="file" id="file">
                         </label>
                     </div>
                     <button type="submit" class="btn btn-primary">Сохранить</button>
